# DocuMind

./: .gitignore  README.md  app.py  config.py  index.py  retriever.py
api/: files.py
backend/: Dockerfile  embeddings.py  main.py  models.py  pyproject.toml  util.py
backend/api/: files.py  llm.py
